Name:                   communicationmonad
Version:                0.1
Description:            Used in conjuction with the abstractedcommunication
                        module to make conversations!
License:                BSD3
-- License-file:           LICENSE
Author:                 Paul Kline
Maintainer:             paulkline@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple


library
  exposed-modules:      CommunicationMonad
  hs-source-dirs:       
  build-depends:        abstractedcommunication,
                        aeson,
                        transformers,
                        base			
