Name:                   httpTest
Version:                0.1
Description:            Testing of the http implementation of the http implementation of the IsChannel Class 
License:                BSD3
License-file:           LICENSE
Author:                 Paul Kline
Maintainer:             paulkline@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple


executable              TestHttpChanA
  hs-source-dirs:       ../, ./
  build-depends:        network-info,
                        network-uri,
                        base,
                        text,
                        scotty
                       
  Main-is: TestHttpChannelAMain.hs
  ghc-options: -O -threaded

executable              TestHttpChanB
  hs-source-dirs:       ../ , ./
  build-depends:        network-uri,
                        network-info,
                        base,
                        text,
                        scotty

                       
  Main-is: TestHttpChannelBMain.hs
  ghc-options: -O -threaded
