Name:                   httpchannelinstance
Version:                0.1
Description:            An http instantiation of the Channel class
License:                BSD3
-- License-file:           LICENSE
Author:                 Paul Kline
Maintainer:             paulkline@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple


library
  exposed-modules:      HttpComm
  hs-source-dirs:       
  build-depends:        base,
                        bytestring,
                        text,
                        mtl,
                        random,
                        stm,
                        aeson,
                        scotty,
                        abstractedcommunication,
                        http-streams,
                        network-info,
                        commtools
