Name:                   commtools
Version:                0.1
Description:            Commonly used things, like a to and fro JSON instances for bytestrings. 
License:                BSD3
-- License-file:           LICENSE
Author:                 Paul Kline
Maintainer:             paulkline@ittc.ku.edu
Cabal-Version:          >= 1.2

Build-type:             Simple


library
  exposed-modules:      CommTools
  hs-source-dirs:       
  build-depends:        base,
                        bytestring,
                        text,
                        base64-bytestring,
                        mtl,
                        VChanUtil,
    --                    random,
      --                  stm,
                        aeson,
          --              scotty,
            --            abstractedcommunication,
                        http-streams,
                        network-info
