name:                httptesting
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Paul Kline
maintainer:          pauliankline@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable httptestingA
  main-is:             TestHttpChannelAMain.hs
  -- other-modules:       
  other-extensions:    RankNTypes, TypeSynonymInstances, FlexibleInstances, ConstraintKinds, OverlappingInstances, OverloadedStrings, RecordWildCards, ExistentialQuantification
  build-depends:       base, 
                       abstractedcommunication, 
                       aeson, 
                       random,
                       httpchannelinstance,
                       armoredcommunication,
                       vchannelinstance,
                       http-streams,
                       communicationmonad,
                       transformers		       
                       		       
  hs-source-dirs:      
  ghc-options: -O -threaded
  default-language:    Haskell2010

executable httptestingB
  main-is:             TestHttpChannelBMain.hs
  -- other-modules:       
  other-extensions:    RankNTypes, TypeSynonymInstances, FlexibleInstances, ConstraintKinds, OverlappingInstances, OverloadedStrings, RecordWildCards, ExistentialQuantification
  build-depends:       base, 
                       abstractedcommunication, 
                       aeson, 
                       random,
                       httpchannelinstance,
                       armoredcommunication,
                       vchannelinstance,
                       http-streams,
                       communicationmonad,
                       transformers		       
  hs-source-dirs:      
  ghc-options: -O -threaded
  default-language:    Haskell2010